Revision history for Perl extension Catalyst::Plugin::Static.

0.04  Sat Mar 19 20:27:00 2005
        - Updated forward to cat5 style
0.03  Sat Mar 19 20:27:00 2005
        - Fixed documentation.
0.02  Sat Feb 19 10:32:00 2005
        - Ooops, missed MANIFEST

0.01  Fri Mar 5 22:00:00 2005
        - first release