@@ -2,6 +2,7 @@ Revision history for Perl extension Catalyst::Plugin::Static.
 
 0.04  Sat Mar 19 20:27:00 2005
         - Updated forward to cat5 style
+        - Using Catalyst::Dispatch::dispatch instead of forward.
 0.03  Sat Mar 19 20:27:00 2005
         - Fixed documentation.
 0.02  Sat Feb 19 10:32:00 2005
